--- a/app/common/icon/index.css
+++ b/app/common/icon/index.css
@@ -4,3 +4,11 @@
   flex-shrink: 0;
   position: relative;
 }
+.Icon_loading{
+  animation: loadingCircle 1s infinite linear;
+}
+@keyframes loadingCircle{
+  100%{
+    transform: rotate(360deg);
+  }
+}
