--- a/app/common/button/index.css
+++ b/app/common/button/index.css
@@ -14,6 +14,21 @@
   font-size: 14px;
   border-radius: 4px;
   transition: all linear 0.2s;
+  justify-content: center;
+}
+.Button_loading{
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+.Button_loading_Icon{
+  color: inherit;
+  width: 20px;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 8px;
 }
 .Button_primary{
   color: #fff;
