--- a/app/page/spacedetail/index.css
+++ b/app/page/spacedetail/index.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow-x: hidden;
 }
 .SpaceDetail>h1{
   color: #262626;
