--- a/app/common/list/index.css
+++ b/app/common/list/index.css
@@ -12,6 +12,8 @@
   color: #595959;
   font-weight: 400;
   font-size: 14px;
+  cursor: pointer;
+  transition: all linear 0.2s;
 }
 
 .List_Checked{
