--- a/app/components/recent-content/index.css
+++ b/app/components/recent-content/index.css
@@ -41,7 +41,9 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  padding-right: 20px;
 }
 .Recent_Content_Item{
   margin-left: 20px;
+  cursor: pointer;
 }
