--- a/app/common/button/index.css
+++ b/app/common/button/index.css
@@ -35,13 +35,13 @@
   background-color: #25b864;
   border-color: #25b864;
 }
-.Button_default:hover{
+.Button_default:not(.Button_disabled):hover{
   background-image: linear-gradient(0deg,#f5f5f5,#fff);
   background: #fafafa;
   color: #47c479;
   border-color: #47c479;
 }
-.Button_default:active{
+.Button_default:not(.Button_disabled):active{
   color: #16914f;
   background-color: #fafafa;
   border-color: #16914f;
@@ -55,4 +55,11 @@
   color: #fff;
   background-color: #16914f;
   border-color: #16914f;
+}
+.Button_disabled{
+  cursor: not-allowed;
+  opacity: 0.4;
+}
+.Button_disabled>a{
+  cursor: not-allowed;
 }
