--- a/app/common/list/index.css
+++ b/app/common/list/index.css
@@ -6,14 +6,19 @@
 }
 
 .List {
-  padding: 0 20px;
-  line-height: 40px;
+  height: 32px;
+  padding: 0 14px;
   min-width: 120px;
   color: #595959;
   font-weight: 400;
   font-size: 14px;
   cursor: pointer;
   transition: all linear 0.2s;
+}
+.List>.Icon{
+  font-size: 15px;
+  top: 1px;
+  margin-right: 7px;
 }
 
 .List_Checked{
