--- a/app/components/editormd/index.css
+++ b/app/components/editormd/index.css
@@ -53,6 +53,18 @@
 .CodeMirror_titlle_left>img{
   width: 20px;
 }
+#preview-container{
+  background: #fff;
+  position: absolute;
+  max-width: 100vw;
+  height: 100vh;
+  z-index: 12;
+  top: 1px;
+  left: 0;
+  padding: 40px 10%;
+  box-sizing: border-box;
+  display: none;
+}
 @media only screen and (max-width: 1430px) {
   .Editormd_Wrapper>.Article_Catalog_Wrapper>.Catalog_title {
       padding-bottom: 23px;
