feat: update catalog

--- a/app/common/dropdown/index.css
+++ b/app/common/dropdown/index.css
@@ -1,7 +1,7 @@
 .Dropdown {
   position: relative;
   cursor: pointer;
-  height: 100%;
+  /* height: 100%; */
   justify-content: center;
 }
 .Dropdown_disabled {
