--- a/app/components/sider-bar/index.css
+++ b/app/components/sider-bar/index.css
@@ -35,7 +35,6 @@
   height: 1px;
   background: #e8e8e8;
   margin-top: 10px;
-  margin-left: 0;
-  margin-bottom: 50px;
+  margin-left: 32px;
   width: 100px;
 }
