--- a/app/common/breadcrumb/index.css
+++ b/app/common/breadcrumb/index.css
@@ -1,6 +1,3 @@
-.Breadcrumb{
-
-}
 .Breadcrumb_Item{
   color: #595959;
   font-size: 14px;
@@ -8,6 +5,7 @@
 .Breadcrumb_Item>a{
   color: #595959;
   font-size: 14px;
+  max-width: 200px;
 }
 .Breadcrumb_Item>span{
   padding: 0 8px;
