--- a/app/components/recent-content/index.css
+++ b/app/components/recent-content/index.css
@@ -1,5 +1,6 @@
 .Recent_Content{
-  width: 692px;
+  /* width: 692px; */
+  width: 100%;
   height: 74px;
   background: #ffffff;
   border-radius: 2px;
@@ -20,17 +21,20 @@
 .Recent_Content_Left{
   display: flex;
   align-items: center;
+  max-width: 80%;
 }
 .Recent_Content_Left>img{
   width: 29px;
 }
 .Recent_Content_Left_Info{
   margin-left: 10px;
+  max-width: calc(100% - 30px);
 }
 .Recent_Content_Left_Info>p{
   color: #262626;
   font-size: 14px;
   margin-bottom: 4px;
+  max-width: 100%;
 }
 .Recent_Content_Left_Info>span{
   font-size: 12px;
@@ -42,6 +46,7 @@
   align-items: center;
   justify-content: flex-end;
   padding-right: 20px;
+  flex-shrink: 0;
 }
 .Recent_Content_Item{
   margin-left: 20px;
