--- a/app/components/article-catalog/index.css
+++ b/app/components/article-catalog/index.css
@@ -3,7 +3,7 @@
   height: 100vh;
   overflow: hidden;
   padding-left: 20px;
-  /* background-color: #f9f9f9; */
+  padding-right: 6px;
   position: absolute;
   right: 0;
   top: 0;
