--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -6,7 +6,7 @@
 }
 
 .Article_Preview_Wrapper {
-  width: calc(100% - 460px);
+  width: calc(100% - 404px);
   height: 100vh;
   flex-shrink: 0;
   background: #ffffff;
@@ -51,6 +51,7 @@
 .editormd-preview {
   height: auto !important;
   position: relative;
+  width: 100% !important;
 }
 
 .Article_Preview_Wrapper>h1 {
