--- a/app/components/content-layout/index.css
+++ b/app/components/content-layout/index.css
@@ -17,3 +17,19 @@
 .Recent_Content_Layout{
   width: 100%;
 }
+.recent_loading{
+  width: 100%;
+  height: 74px;
+  background: #ffffff;
+  border-radius: 2px;
+  border: 1px solid #e8e8e8;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 12px;
+  color: #8c8c8c;
+}
+.recent_loading>.Icon{
+  font-size: 30px;
+}
