--- a/app/components/editormd/index.css
+++ b/app/components/editormd/index.css
@@ -1,75 +1,79 @@
-.editormd-custom-toolTip{
-  position: absolute;
-  left: 0;
-  margin-top: 2px;
-  white-space: nowrap;
-  background-color: rgba(0,0,0,0.75);
-  padding: 6px 8px;
-  border-radius: 4px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-  color: #fff;
-  font-size: 14px;
-  text-align: center;
-  z-index: 1000;
-  display: none;
+.editormd-custom-toolTip {
+    position: absolute;
+    left: 0;
+    margin-top: 2px;
+    white-space: nowrap;
+    background-color: rgba(0, 0, 0, 0.75);
+    padding: 6px 8px;
+    border-radius: 4px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+    color: #fff;
+    font-size: 14px;
+    text-align: center;
+    z-index: 1000;
+    display: none;
 }
 
-.Editormd_Wrapper{
-  width: 100%;
-  background: #ffffff;
-  position: relative;
+.Editormd_Wrapper {
+    width: 100%;
+    background: #ffffff;
+    position: relative;
 }
-.Editormd{
-  width: calc(100% - 221px);
-  height: calc(100vh - 58px);
-  overflow-y: scroll;
+
+.Editormd {
+    width: calc(100% - 221px);
+    height: calc(100vh - 58px);
+    overflow-y: scroll;
+    border: 1px solid #ddd;
 }
-#editormd_edit{
-  margin: 0;
-  min-height: calc(100vh - 58px);
+
+#editormd_edit {
+    margin: 0;
+    min-height: calc(100vh - 58px);
 }
-.CodeMirror_title{
-  width: 100%;
-  /* padding: 48px 60px 16px 0; */
-  border-bottom: 1px solid #e8e8e8;
-  height: 60px;
-  overflow: hidden;
+
+.CodeMirror_title {
+    width: 100%;
+    /* padding: 48px 60px 16px 0; */
+    border-bottom: 1px solid #e8e8e8;
+    height: 60px;
+    overflow: hidden;
 }
-.CodeMirror_title>input{
-  width: 100%;
-  height: 100%;
-  color: #262626;
-  font-weight: 700;
-  font-size: 30px;
-  padding-left: 10px;
+
+.CodeMirror_title>input {
+    width: 100%;
+    height: 100%;
+    color: #262626;
+    font-weight: 700;
+    font-size: 30px;
+    padding-left: 10px;
 }
-.CodeMirror_title_left{
-  width: 48px;
-  height: 100%;
-  background-color: #f7f7f7;
-  flex-shrink: 0;
-  justify-content: center;
+
+.CodeMirror_title_left {
+    width: 48px;
+    height: 100%;
+    background-color: #f7f7f7;
+    flex-shrink: 0;
+    justify-content: center;
 }
-.CodeMirror_title_left>img{
-  width: 20px;
+
+.CodeMirror_title_left>img {
+    width: 20px;
 }
-#preview-container{
-  background: #fff;
-  position: absolute;
-  max-width: 100vw;
-  height: 100vh;
-  z-index: 12;
-  top: 1px;
-  left: 0;
-  padding: 40px 10%;
-  box-sizing: border-box;
-  display: none;
+
+#preview-container {
+    background: #fff;
+    position: absolute;
+    max-width: 100vw;
+    height: 100vh;
+    z-index: 12;
+    top: 1px;
+    left: 0;
+    padding: 40px 10%;
+    box-sizing: border-box;
+    display: none;
 }
-@media only screen and (max-width: 1430px) {
-  .Editormd_Wrapper>.Article_Catalog_Wrapper>.Catalog_title {
-      padding-bottom: 23px;
-      padding-top: 34px;
-      line-height: normal;
-      height: auto;
-  }
+
+.CodeMirror-sizer {
+    padding-bottom: 70px !important;
 }
