--- a/app/components/recent-content/index.css
+++ b/app/components/recent-content/index.css
@@ -1,22 +1,22 @@
 .Recent_Content{
-  /* width: 692px; */
   width: 100%;
-  height: 74px;
   background: #ffffff;
   border-radius: 2px;
   border: 1px solid #e8e8e8;
-  cursor: pointer;
   margin-bottom: 8px;
   -webkit-transition: box-shadow .35s ease;
   transition: box-shadow .35s ease;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 12px;
+  padding: 10px 12px;
   box-sizing: border-box;
 }
+.recent_content_point{
+  cursor: pointer;
+}
 .Recent_Content:hover{
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,.08);
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,.08);
 }
 .Recent_Content_Left{
   display: flex;
@@ -33,7 +33,6 @@
 .Recent_Content_Left_Info>p{
   color: #262626;
   font-size: 14px;
-  margin-bottom: 4px;
   max-width: 100%;
 }
 .Recent_Content_Left_Info>span{
