--- a/app/components/article/index.css
+++ b/app/components/article/index.css
@@ -32,6 +32,7 @@
   align-items: center;
   padding: 0 22px;
   box-sizing: border-box;
+  padding-top: 20px;
 }
 
 .Footer_Meta_Item {
@@ -61,6 +62,7 @@
   padding: 16px;
   padding-bottom: 16px;
   border-bottom: 1px solid #e8e8e8;
+  background: rgb(249, 250, 251);
 }
 .Article_DraftTips_Warpper{
   width: 100%;
