--- a/app/components/book-catalog/index.css
+++ b/app/components/book-catalog/index.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   border-right: 1px solid #e8e8e8;
+  background: #ffffff;
 }
 .BookCatalog_Item{
   position: relative;
