--- a/app/layout/page-layout/index.css
+++ b/app/layout/page-layout/index.css
@@ -5,8 +5,8 @@
 .Container{
   width: 100%;
   min-width: 375px;
-  height: 100vh;
-  overflow: hidden;
+  /* height: 100vh; */
+  /* overflow: hidden; */
   background: #fafafa;
 }
 .Content_Wrapper_Index{
