feat: 适配移动端

--- a/app/components/footer/index.css
+++ b/app/components/footer/index.css
@@ -1,24 +1,30 @@
-.Footer_Wrapper{
+.Footer_Wrapper {
   width: 100%;
   padding: 10px 0 20px 0;
   position: relative;
 }
-.Footer_Wrapper_Tip{
+
+.Footer_Wrapper_Tip {
   justify-content: center;
   flex: 1;
-  border-bottom: 1px solid #e8e8e8;
+  /* border-bottom: 1px solid #e8e8e8; */
   font-size: 14px;
-  padding-bottom: 15px;
   max-width: 600px;
   margin: auto;
+  padding-bottom: 10px;
 }
-.Footer_Wrapper_Tip>img{
-  width: 20px;
-}
-.Footer_Wrapper_Tip>h4{
+
+.Footer_Wrapper_Tip>div>span {
   font-weight: 500;
-  padding: 0 10px
 }
-.Footer_Wrapper_Tip>span{
+
+.Footer_Wrapper_Tip>div>img {
+  width: 40px;
+  padding: 10px;
+  box-sizing: content-box;
+}
+
+.Footer_Wrapper_Tip>span {
   color: #595959;
+  padding: 0 10px;
 }
