--- a/app/common/button/index.css
+++ b/app/common/button/index.css
@@ -1,4 +1,4 @@
-.Button{
+.Button {
   outline: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -15,12 +15,15 @@
   border-radius: 4px;
   transition: all linear 0.2s;
   justify-content: center;
+  flex-shrink: 0;
 }
-.Button_loading{
+
+.Button_loading {
   opacity: 0.5;
   cursor: not-allowed;
 }
-.Button_loading_Icon{
+
+.Button_loading_Icon {
   color: inherit;
   width: 20px;
   width: 20px;
@@ -30,36 +33,43 @@
   justify-content: center;
   margin-right: 8px;
 }
-.Button_primary{
+
+.Button_primary {
   color: #fff;
   background-color: #25b864;
   border-color: #25b864;
 }
-.Button_default:not(.Button_disabled):hover{
-  background-image: linear-gradient(0deg,#f5f5f5,#fff);
+
+.Button_default:not(.Button_disabled):hover {
+  background-image: linear-gradient(0deg, #f5f5f5, #fff);
   background: #fafafa;
   color: #47c479;
   border-color: #47c479;
 }
-.Button_default:not(.Button_disabled):active{
+
+.Button_default:not(.Button_disabled):active {
   color: #16914f;
   background-color: #fafafa;
   border-color: #16914f;
 }
-.Button_primary:not(.Button_disabled):hover{
+
+.Button_primary:not(.Button_disabled):hover {
   color: #fff;
   background-color: #47c479;
   border-color: #47c479;
 }
-.Button_primary:not(.Button_disabled):active{
+
+.Button_primary:not(.Button_disabled):active {
   color: #fff;
   background-color: #16914f;
   border-color: #16914f;
 }
-.Button_disabled{
+
+.Button_disabled {
   cursor: not-allowed;
   opacity: 0.4;
 }
-.Button_disabled>a{
+
+.Button_disabled>a {
   cursor: not-allowed;
 }
