--- a/app/common/list/index.css
+++ b/app/common/list/index.css
@@ -8,22 +8,25 @@
 .List {
   height: 32px;
   padding: 0 14px;
-  min-width: 120px;
+  /* min-width: 120px; */
+  min-width: 100px;
   color: #595959;
   font-weight: 400;
   font-size: 14px;
   cursor: pointer;
   transition: all linear 0.2s;
 }
-.List>.Icon{
+
+.List>.Icon {
   font-size: 15px;
   top: 1px;
   margin-right: 7px;
 }
 
-.List_Checked{
+.List_Checked {
   background: #f5f5f5;
 }
+
 .List:hover {
   background-color: #e9f7ec;
 }
