--- a/app/common/tag/index.css
+++ b/app/common/tag/index.css
@@ -12,11 +12,13 @@
   display: inline-flex;
   align-items: center;
   font-weight: 600;
+  transform-origin: left;
 }
 
 .Tag:hover {
   opacity: .85;
 }
-.Tag>.Icon{
+
+.Tag>.Icon {
   color: #fff;
 }
