--- a/app/components/content-layout/index.css
+++ b/app/components/content-layout/index.css
@@ -1,23 +1,27 @@
-.Content_Layout{
+.Content_Layout {
   flex: 1;
   overflow: hidden;
 }
-.Content_Layout_Head{
+
+.Content_Layout_Head {
   height: 32px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-bottom: 10px;
 }
-.Content_Layout_Recent_Edit{
+
+.content-recent-edit {
   color: #262626;
   font-weight: bold;
   font-size: 14px;
 }
-.Recent_Content_Layout{
+
+.Recent_Content_Layout {
   width: 100%;
 }
-.recent_loading{
+
+.recent_loading {
   width: 100%;
   height: 74px;
   background: #ffffff;
@@ -30,6 +34,7 @@
   font-size: 12px;
   color: #8c8c8c;
 }
-.recent_loading>.Icon{
+
+.recent_loading>.Icon {
   font-size: 30px;
 }
