--- a/app/components/login/index.css
+++ b/app/components/login/index.css
@@ -1,7 +1,10 @@
 .Login_Wrapper {
   width: 430px;
-  margin: 0 auto;
-  margin-top: 95px;
+  max-width: calc(100% - 16px);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate3d(-50%, -50%, 0);
   border: 1px solid #e9e9e9;
   background-color: #fff;
   padding: 40px 8px 48px;
@@ -37,33 +40,30 @@
 .Login_submit {
   width: 320px;
   height: 40px;
-  /* background-color: #25b864;
-  color: #fff;
-  font-weight: 400;
-  justify-content: center;
-  font-size: 16px;
-  border-radius: 4px;
-  border: 1px solid #25b864;
-  transition: all linear 0.2s; */
 }
-.Login_submit:active{
+
+.Login_submit:active {
   outline: 0;
   box-shadow: none;
   background-color: #16914f;
   border-color: #16914f;
 }
-.Login_submit:hover{
+
+.Login_submit:hover {
   background-color: #47c479;
   border-color: #47c479;
 }
-.Login_action{
+
+.Login_action {
   color: #096dd9;
   font-size: 14px;
-  margin-top: 20px;
   align-self: flex-start;
-  margin-left: 55px;
+  width: 320px;
+  margin: 0 auto;
+  margin-top: 20px;
 }
-.Login_Tips{
+
+.Login_Tips {
   margin-top: 40px;
   width: 320px;
   border-top: 1px solid #e8e8e8;
@@ -71,11 +71,13 @@
   font-size: 14px;
   padding-top: 10px;
 }
-.Login_Error{
+
+.Login_Error {
   color: #f5222d;
   font-size: 14px;
   position: relative;
   top: -9px;
   align-self: flex-start;
-  margin-left: 46px;
+  margin: 0 auto;
+  width: 320px;
 }
