--- a/app/page/docs/index.css
+++ b/app/page/docs/index.css
@@ -1,30 +1,88 @@
-.Space_Operation_Icon{
-	font-size: 20px;
-	top: 5px;
-	margin-left: 12px;
-	margin-top: -5px;
-	cursor: pointer;
-	position: relative;
+.Space_Operation_Icon {
+  font-size: 20px;
+  top: 5px;
+  margin-left: 12px;
+  margin-top: -5px;
+  cursor: pointer;
+  position: relative;
 }
-.Doc_operation_item{
-	white-space: nowrap;
-	padding: 0 14px
+
+.Doc_operation_item {
+  white-space: nowrap;
+  padding: 0 14px
 }
-.Docs_operations{
-	box-shadow: none;
-	padding: 0;
+
+.Docs_operations {
+  box-shadow: none;
+  padding: 0;
 }
-.Docs_operations>li{
-	line-height: 34px;
+
+.Docs_operations>li {
+  line-height: 34px;
 }
-.Doc_Action{
-	display: block;
-	width: 100px;
+
+.Doc_Action {
+  display: block;
+  width: 100px;
 }
-.Doc_Action>span{
-	cursor: pointer;
-	color: rgb(16, 142, 233);
+
+.Doc_Action>span {
+  cursor: pointer;
+  color: rgb(16, 142, 233);
 }
-.docs_name{
-	min-width: 180px;
+
+.docs_name {
+  min-width: 180px;
+}
+
+.docs_m_loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  padding: 20px;
+}
+
+.docs_m_empty {
+  padding: 40px;
+  text-align: center;
+  line-height: 20px;
+  color: #8c8c8c;
+  display: block;
+}
+
+.docs_item {
+  padding: 10px;
+  border-bottom: 1px solid #e8e8e8;
+}
+
+.docs_row_head>span {
+  padding: 0 4px;
+  font-size: 12px;
+  color: #b2bac2;
+}
+
+.docs_row_head>span:nth-child(2) {
+  flex-shrink: 0;
+}
+
+.docs_row_head>span:nth-child(3) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  display: block;
+}
+
+.docs_row_head>span:last-child {
+  font-weight: bold;
+}
+
+.docs_item_title {
+  color: #2e3135;
+  font-weight: 600;
+  padding: 4px 0;
+}
+
+.docs_item_sub>.Tag {
+  transform: scale(0.8);
 }
