--- a/app/mkfx.css
+++ b/app/mkfx.css
@@ -1,16 +1,18 @@
 /* Preview mkfx theme  */
 .editormd-preview-theme-mkfx {
     background: rgb(249, 250, 251);
-    font-family: "Helvetica Neue",Arial,"Hiragino Sans GB","STHeiti","Microsoft YaHei","WenQuanYi Micro Hei",SimSun,Song,sans-serif;
+    font-family: "Helvetica Neue", Arial, "Hiragino Sans GB", "STHeiti", "Microsoft YaHei", "WenQuanYi Micro Hei", SimSun, Song, sans-serif;
     color: #2c3f51;
-    font-size: 16px;
+    font-size: 14px;
 }
-.editormd-preview-theme-mkfx .editormd-preview-container{
+
+.editormd-preview-theme-mkfx .editormd-preview-container {
     background: rgb(249, 250, 251);
     color: #2c3f51;
-    font-size: 16px;
+    font-size: 14px;
 }
-.editormd-preview-theme-mkfx .editormd-preview-container a{
+
+.editormd-preview-theme-mkfx .editormd-preview-container a {
     color: #1980e6;
 }
 
@@ -21,14 +23,14 @@
 
 .editormd-preview-theme-mkfx .editormd-preview-container blockquote {
     border-left-width: 10px;
-    background-color: rgba(102,128,153,0.05);
+    background-color: rgba(102, 128, 153, 0.05);
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
     padding: 15px 20px;
     font-style: normal;
 }
 
-.editormd-preview-theme-mkfx .editormd-preview-container blockquote strong{
+.editormd-preview-theme-mkfx .editormd-preview-container blockquote strong {
     color: #2c3f51;
     font-weight: bold;
 }
@@ -81,7 +83,8 @@
 .editormd-preview-theme-mkfx .markdown-body h2 {
     border-color: #222;
 }
-.editormd-preview-theme-mkfx .markdown-body hr{}
+
+.editormd-preview-theme-mkfx .markdown-body hr {}
 
 .editormd-preview-theme-mkfx pre {
     background: #23241f;
@@ -142,39 +145,50 @@
         /* a declaration; a variable name */
         /* a function name */
     }
+
     .editormd-preview-theme-mkfx .str {
         color: #080;
     }
+
     .editormd-preview-theme-mkfx .kwd {
         color: #ff9900;
     }
+
     .editormd-preview-theme-mkfx .com {
         color: #444444;
     }
+
     .editormd-preview-theme-mkfx .typ {
         color: #606;
     }
+
     .editormd-preview-theme-mkfx .lit {
         color: #066;
     }
+
     .editormd-preview-theme-mkfx .pun,
     .editormd-preview-theme-mkfx .opn,
     .editormd-preview-theme-mkfx .clo {
         color: #660;
     }
+
     .editormd-preview-theme-mkfx .tag {
         color: #ff9900;
     }
+
     .editormd-preview-theme-mkfx .atn {
         color: #6C95F5;
     }
+
     .editormd-preview-theme-mkfx .atv {
         color: #080;
     }
+
     .editormd-preview-theme-mkfx .dec,
     .editormd-preview-theme-mkfx .var {
         color: #008BA7;
     }
+
     .editormd-preview-theme-mkfx .fun {
         color: red;
     }
