--- a/app/index.css
+++ b/app/index.css
@@ -300,7 +300,8 @@ body, button, input, select, textarea {
 #root{
     width: 100%;
     height: 100vh;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    overflow: hidden;
+    /* overflow-x: hidden;
+    overflow-y: scroll; */
     background: #fafafa;
 }
