--- a/app/components/header-article/index.css
+++ b/app/components/header-article/index.css
@@ -1,11 +1,12 @@
-.Article_Header{
+.Article_Header {
     width: 100%;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.06);
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .06);
     background: #ffffff;
     position: relative;
     z-index: 11;
 }
-.Article_Header_Wrapper{
+
+.Article_Header_Wrapper {
     height: 58px;
     will-change: margin;
     margin: 0 auto;
@@ -14,26 +15,32 @@
     justify-content: space-between;
     padding: 0 10px;
 }
-.Article_Header_Wrapper_Hide{
+
+.Article_Header_Wrapper_Hide {
     margin-top: -58px;
 }
-.Article_Header_left, .Article_Header_right{
+
+.Article_Header_left,
+.Article_Header_right {
     height: 100%;
     display: flex;
     align-items: center;
     box-sizing: border-box;
 }
-.Article_Header_left{
-    padding-left: 12px;
+
+.Article_Header_left {
+    /* padding-left: 12px; */
 }
-.Article_Header_favicon{
+
+.Article_Header_favicon {
     width: 32px;
     height: 32px;
     border-radius: 4px;
 }
-.Article_Header_title{
+
+.Article_Header_title {
     display: block;
-    margin-left: 10px;
+    /* margin-left: 10px; */
     height: 100%;
     background: url('/images/logo.jpeg') no-repeat 0 0;
     width: 97px;
@@ -41,24 +48,28 @@
     background-size: contain;
     margin-right: 18px;
 }
-.Article_Header_title>span{
+
+.Article_Header_title>span {
     font-size: 14px;
     font-weight: 700;
     color: #262626;
     position: relative;
     left: -134px;
 }
-.Article_Header_Edit_Btn{
+
+.Article_Header_Edit_Btn {
     border-radius: 4px;
     overflow: hidden;
 }
-.Article_Header_Edit_Btn>.button{
+
+.Article_Header_Edit_Btn>.button {
     background: #47c479;
     color: #ffffff;
     border: 1px solid #47c479;
     border-radius: 0;
 }
-.Article_Header_Edit_Btn>div{
+
+.Article_Header_Edit_Btn>div {
     height: 32px;
     background: #47c479;
     display: flex;
@@ -68,19 +79,22 @@
     box-sizing: border-box;
     cursor: pointer;
 }
-.Article_Header_Edit_Btn>div>i{
+
+.Article_Header_Edit_Btn>div>i {
     position: relative;
     top: 1px;
     color: #ffffff;
 }
-.Article_Header_Fun_Icon>i{
+
+.Article_Header_Fun_Icon>i {
     font-size: 23px;
     position: relative;
     top: 1px;
     padding: 0 20px;
     cursor: pointer;
 }
-.Article_Header_Fun>p{
+
+.Article_Header_Fun>p {
     width: 100%;
     height: 32px;
     line-height: 32px;
@@ -90,16 +104,19 @@
     box-sizing: border-box;
     cursor: pointer;
 }
-.Article_Header_Fun>p:hover{
+
+.Article_Header_Fun>p:hover {
     color: #595959;
     background: #e9f7ec;
-    transition: background .3s cubic-bezier(.645,.045,.355,1);
+    transition: background .3s cubic-bezier(.645, .045, .355, 1);
 }
-.Article_Header_right>.Popover_Wrapper>.Popover_Wrapper_Content{
+
+.Article_Header_right>.Popover_Wrapper>.Popover_Wrapper_Content {
     left: -60px;
     top: 56px;
 }
-.Article_Header_Save{
+
+.Article_Header_Save {
     line-height: 22px;
     font-size: 12px;
     color: #8c8c8c;
