--- a/app/index.css
+++ b/app/index.css
@@ -1,4 +1,69 @@
-html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
+html,
+body,
+body div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+figure,
+footer,
+header,
+menu,
+nav,
+section,
+time,
+mark,
+audio,
+video,
+details,
+summary {
     margin: 0;
     padding: 0;
     border: 0;
@@ -9,12 +74,13 @@ html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquot
     box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
     -webkit-overflow-scrolling: touch;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-    font-family: Chinese Quote,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,PingFang SC,Hiragino Sans GB,Microsoft YaHei,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-family: Chinese Quote, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Helvetica Neue, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #595959;
     font-size: 14px;
@@ -25,7 +91,15 @@ html, body {
     font-feature-settings: "tnum";
 }
 
-article, aside, figure, footer, header, nav, section, details, summary {
+article,
+aside,
+figure,
+footer,
+header,
+nav,
+section,
+details,
+summary {
     display: block;
 }
 
@@ -56,11 +130,15 @@ ul {
     list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
     quotes: none;
 }
 
-blockquote:before, blockquote:after, q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
     content: '';
     content: none;
 }
@@ -77,7 +155,8 @@ del {
     text-decoration: line-through;
 }
 
-abbr[title], dfn[title] {
+abbr[title],
+dfn[title] {
     border-bottom: 1px dotted #000;
     cursor: help;
 }
@@ -108,7 +187,8 @@ hr {
     padding: 0;
 }
 
-input, select {
+input,
+select {
     vertical-align: middle;
     outline: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -120,20 +200,31 @@ input, select {
     border: none;
     line-height: normal !important;
 }
-input::-ms-clear{display: none;} 
-input::-ms-reveal{display: none;}
-input, button, select, textarea {
+
+input::-ms-clear {
+    display: none;
+}
+
+input::-ms-reveal {
+    display: none;
+}
+
+input,
+button,
+select,
+textarea {
     outline: none;
     -webkit-appearance: none;
     border-radius: 0;
 }
+
 input::-webkit-credentials-auto-fill-button {
     display: none !important;
     visibility: hidden;
     pointer-events: none;
-    position: absolute; 
+    position: absolute;
     right: 0;
-} 
+}
 
 pre {
     white-space: pre;
@@ -162,7 +253,9 @@ input[type="checkbox"] {
     vertical-align: text-bottom;
 }
 
-select, input, textarea {
+select,
+input,
+textarea {
     font: 99% sans-serif;
 }
 
@@ -179,13 +272,15 @@ strong {
     font-weight: bold;
 }
 
-td, td img {
+td,
+td img {
     vertical-align: top;
 }
 
 /* Make sure sup and sub don't mess with your line-heights http://gist.github.com/413930 */
 
-sub, sup {
+sub,
+sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
@@ -201,26 +296,38 @@ sub {
 
 /* standardize any monospaced elements */
 
-pre, code, kbd, samp {
+pre,
+code,
+kbd,
+samp {
     font-family: monospace, sans-serif;
 }
 
 /* hand cursor on clickable elements */
 
-.clickable, label, input[type=button], input[type=submit], input[type=file], button {
+.clickable,
+label,
+input[type=button],
+input[type=submit],
+input[type=file],
+button {
     cursor: pointer;
 }
 
 /* Webkit browsers add a 2px margin outside the chrome of form elements */
 
-button, input, select, textarea {
+button,
+input,
+select,
+textarea {
     margin: 0;
     outline: 0
 }
 
 /* make buttons play nice in IE */
 
-button, input[type=button] {
+button,
+input[type=button] {
     width: auto;
     overflow: visible;
 }
@@ -253,7 +360,11 @@ a:hover {
     color: inherit;
 }
 
-body, button, input, select, textarea {
+body,
+button,
+input,
+select,
+textarea {
     font: 12px \5FAE\8F6F\96C5\9ED1, arial, \5b8b\4f53;
 }
 
@@ -275,7 +386,8 @@ body, button, input, select, textarea {
     white-space: nowrap;
     display: block;
 }
-.flex{
+
+.flex {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -297,11 +409,10 @@ body, button, input, select, textarea {
     font-size: 14px;
     border-radius: 4px;
 }
-#root{
+
+#root {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     overflow: hidden;
-    /* overflow-x: hidden;
-    overflow-y: scroll; */
     background: #fafafa;
 }
