--- a/app/components/recent-content/index.css
+++ b/app/components/recent-content/index.css
@@ -1,4 +1,4 @@
-.Recent_Content{
+.Recent_Content {
   width: 100%;
   background: #ffffff;
   border-radius: 2px;
@@ -12,46 +12,57 @@
   padding: 10px 12px;
   box-sizing: border-box;
 }
-.recent_content_point{
+
+.recent_content_point {
   cursor: pointer;
 }
-.Recent_Content:hover{
-  box-shadow: 0 2px 4px 0 rgba(0,0,0,.08);
+
+.Recent_Content:hover {
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .08);
 }
-.Recent_Content_Left{
+
+.Recent_Content_Left {
   display: flex;
   align-items: center;
   max-width: 80%;
 }
-.Recent_Content_Left>img{
+
+.Recent_Content_Left>img {
   width: 29px;
 }
-.Recent_Content_Left_Info{
+
+.Recent_Content_Left_Info {
   margin-left: 10px;
   max-width: calc(100% - 30px);
 }
-.Recent_Content_Left_Info>p{
+
+.Recent_Content_Left_Info>p {
   color: #262626;
   font-size: 14px;
   max-width: 100%;
+  font-weight: 600;
 }
-.Recent_Content_Left_Info>span{
+
+.Recent_Content_Left_Info>span {
   font-size: 12px;
   color: #8c8c8c;
   margin-right: 14px;
 }
-.Recent_Content_Right{
+
+.Recent_Content_Right {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   padding-right: 20px;
   flex-shrink: 0;
 }
-.Recent_Content_Item{
+
+.Recent_Content_Item {
   margin-left: 20px;
   cursor: pointer;
 }
-.Recent_Content_Item_Img{
+
+.Recent_Content_Item_Img {
   width: 20px;
   height: 20px;
   cursor: pointer;
