--- a/app/components/book-catalog/index.css
+++ b/app/components/book-catalog/index.css
@@ -1,4 +1,4 @@
-.BookCatalog_Wrapper{
+.BookCatalog_Wrapper {
   width: 190px;
   padding: 27px 24px 24px 18px;
   box-sizing: border-box;
@@ -8,10 +8,12 @@
   border-right: 1px solid #e8e8e8;
   background: #ffffff;
 }
-.BookCatalog_Item{
+
+.BookCatalog_Item {
   position: relative;
 }
-.BookCatalog_Item>.Icon{
+
+.BookCatalog_Item>.Icon {
   font-size: 12px;
   transition: all linear 0.2s;
   transform: rotate(-90deg);
@@ -19,12 +21,14 @@
   left: -12px;
   cursor: s;
 }
-.BookCatalog_Item_Open>.Icon{
+
+.BookCatalog_Item_Open>.Icon {
   transform: rotate(0deg);
   left: -14px;
   margin-top: 1px;
 }
-.BookCatalog_NavLink{
+
+.bookcatalog {
   width: 100%;
   height: 28px;
   line-height: 28px;
