--- a/app/components/login/index.css
+++ b/app/components/login/index.css
@@ -81,3 +81,11 @@
   margin: 0 auto;
   width: 320px;
 }
+
+.login_bg {
+  width: 100%;
+  height: 100vh;
+  background: url('/images/login-bg.jpg') no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
