--- a/app/components/mobile-article-toolbar/index.css
+++ b/app/components/mobile-article-toolbar/index.css
@@ -45,7 +45,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  max-height: 60vh;
+  height: 60vh;
   overflow-y: scroll;
   background-color: #fff;
   padding: 0 16px;
