--- a/app/common/dropdown/index.css
+++ b/app/common/dropdown/index.css
@@ -4,6 +4,7 @@
   /* height: 100%; */
   justify-content: center;
 }
+
 .Dropdown_disabled {
   color: rgba(0, 0, 0, 0.25);
   background-color: #f5f5f5;
@@ -21,24 +22,33 @@
   opacity: 0.6;
   border-radius: 4px;
 }
+
 .Dropdown_Overlay {
+  width: 100%;
   display: none;
-  box-shadow: 0 2px 8px rgba(0,0,0,.15);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, .15);
   border-radius: 4px;
   position: absolute;
   top: 100%;
   left: 0;
 }
-.Dropdown_Overlay_Visible>.Dropdown_Overlay{
+
+.Dropdown_Overlay_Visible>.Dropdown_Overlay {
   display: block;
 }
-.Dropdown_Hover:hover>.Dropdown_Overlay{
+
+.Dropdown_Hover:hover>.Dropdown_Overlay {
   display: block;
   animation-name: fadeInUp;
   animation-duration: 200ms;
 }
-.Dropdown_Click_Expand>.Dropdown_Overlay{
+
+.Dropdown_Click_Expand>.Dropdown_Overlay {
   display: block;
   animation-name: fadeInUp;
   animation-duration: 200ms;
+}
+
+.Dropdown_Child {
+  width: 100%;
 }
