--- a/app/components/login/index.css
+++ b/app/components/login/index.css
@@ -85,7 +85,7 @@
 .login_bg {
   width: 100%;
   height: 100vh;
-  background: url('/images/login-bg.jpg') no-repeat;
+  /* background: url('/images/login-bg.jpg') no-repeat; */
   background-size: cover;
   overflow: hidden;
 }
